feat: refactored unit tests